Fix scrollbar in the side panel components. Add friends and add friend components with base style.

--- a/src/app/chat/components/active-chats/active-chats.component.css
+++ b/src/app/chat/components/active-chats/active-chats.component.css
@@ -65,19 +65,16 @@
 
 /* Menu button */
 .btn-menu {
-    color: #727272;
-
-    transition: opacity 0.3s ease-in-out;
-    opacity: 0;
+    color: #d4d4d4;
 }
 
 .btn-menu:hover {
-    color: #a1a1a1;
+    color: #fff;
     cursor: pointer;
 }
 
-.contact-list li:hover .btn-menu {
-    opacity: 1;
+.thin-scrollbar::-webkit-scrollbar-track {
+    background: #111111;
 }
 
 /* Temp */
